# GGE-Oracle

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: rust.yml
rust/: Cargo.toml
rust/src/: index.rs  lib.rs  types.rs  updater_core.rs
rust/src/data/: block.rs  interface.rs  mod.rs  primitives.rs  structures.rs  utils.rs
src/gge_oracle/: main.py  storage.py  typings.py  utils.py
src/gge_oracle/config/: __init__.py  _config.py  _typings.py
src/gge_oracle/encoding/: __init__.py  _interface.py  _utils.py  player.py
src/gge_oracle/fetcher/: __init__.py  _client.py  _client_config.py  _decoder.py  _manager.py  _session.py  config.py
src/gge_oracle/updater/: __init__.py  updater.py
src/gge_oracle/updater/native/: __init__.pyi  typings.pyi  updater.pyi
